--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
             <div class="project-list">
 
                 <div class="project-card">
-                    <h3><a href="https://link-to-project3.com" target="_blank">Amazon Clone</a></h3>
+                    <h3><a href="https://kuswri.github.io/Amazon-clone/" target="_blank">Amazon Clone</a></h3>
                     <p>Description: Created Amazon clone in which I have displayed different items for Sale.</p>
                 </div>
 
                 <div class="project-card">
-                    <h3><a href="https://link-to-project1.com" target="_blank">Geography-wise weather report</a></h3>
+                    <h3><a href="https://github.com/kuswri/weather_forcast" target="_blank">Geography-wise weather report</a></h3>
                     <p>Description: By inputing geographical location you can get the weather report for that perticular geographical area. In this I have used api call from the weather forcasting sites.</p>
                 </div>
 
                 <div class="project-card">
-                    <h3><a href="https://link-to-project2.com" target="_blank">Calculator</a></h3>
+                    <h3><a href="https://github.com/kuswri/Calculator" target="_blank">Calculator</a></h3>
                     <p>Description: In this we can perform simple mathematical operations and some trignometric operations.</p>
                 </div>
 
